Generates controller, sets up index route

--- a/config/database.yml
+++ b/config/database.yml
@@ -6,10 +6,14 @@ default: &default
 development:
   <<: *default
   database: FikaTogether_API_development
+  username: postgres
+
 
 test:
   <<: *default
   database: FikaTogether_API_test
+  username: postgres
+
 
 production:
   <<: *default
